# py-web-hw9

./: README.md  config.ini  connect_to_mongodb.py  load_data_to_mongodb.py  main.py  models.py  pyproject.toml
output/: authors.json  quotes.json
scrapy_project/scrapy_project/: items.py  pipelines.py  settings.py
scrapy_project/scrapy_project/spiders/: quotes_spider.py
