[tool.poetry]
name = "scrapy-hw9"
version = "0.1"
description = "Scrapy script"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "scrapy_hw9"}]

[tool.poetry.dependencies]
python = "3.11.4"
scrapy = "^2.10.1"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"
configparser = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
